# azure-functions-scaffold-python

./: .gitignore  .pre-commit-config.yaml  404.html  AGENT.md  AGENTS.md  ARCH.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Makefile  PRD.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  cliff.toml  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-test.yml  ci.yml  codeql.yml  docs.yml  e2e-azure.yml  maintenance.yml  performance.yml  publish-pypi.yml  publish.yml  release.yml  sbom.yml  security.yml  stale.yml  templates-smoke.yml
changelog/: index.html
choose-a-plan/: index.html
contributing/development/: index.html
contributing/guidelines/: index.html
contributing/testing/: index.html
deployment/: index.html
docs/: CLI.md  ROADMAP.md  STYLE_GUIDE.md  TEMPLATE_SPEC.md  agent-playbook.md  architecture.md  changelog.md  cli.md  contributing.md  deployment.md  faq.md  index.md  installation.md  llms.txt  quickstart.md  release_process.md  roadmap.md  security.md  style_guide.md  template_spec.md  testing.md  why.md
docs/contributing/: development.md  guidelines.md  testing.md
docs/examples/: ai_agents.md  full_stack.md  http_api.md  index.md  timer_job.md
docs/guide/: configuration.md  deploying.md  expanding.md  features.md  generated-output.md  getting-started.md  index.md  project-structure.md  stacks.md  templates.md  troubleshooting.md  tutorial.md
docs/migration/: 0.6.0.md
docs/reference/: api.md  architecture.md  cli.md  template-spec.md
docs_hooks/: changelog.py
examples/: index.html
examples/full_stack/: index.html
examples/http_api/: index.html
examples/timer_job/: index.html
faq/: index.html
guide/: index.html
guide/configuration/: index.html
guide/deploying/: index.html
guide/expanding/: index.html
guide/features/: index.html
guide/getting-started/: index.html
guide/project-structure/: index.html
guide/stacks/: index.html
guide/templates/: index.html
guide/troubleshooting/: index.html
guide/tutorial/: index.html
reference/api/: index.html
reference/architecture/: index.html
reference/cli/: index.html
reference/template-spec/: index.html
search/: search_index.json
src/azure_functions_scaffold/: __init__.py  cli.py  cli_advanced.py  cli_ai.py  cli_api.py  cli_common.py  cli_worker.py  errors.py  generator.py  models.py  scaffolder.py  template_registry.py
src/azure_functions_scaffold/generator/: __init__.py  function_app.py  json_mutators.py  writer.py
src/azure_functions_scaffold/templates/ai/: README.md.j2  pyproject.toml.j2
src/azure_functions_scaffold/templates/ai/app/functions/: ai.py.j2
src/azure_functions_scaffold/templates/blob/: README.md.j2  function_app.py.j2
src/azure_functions_scaffold/templates/blob/app/core/: logging.py.j2
src/azure_functions_scaffold/templates/blob/app/functions/: blob.py.j2
src/azure_functions_scaffold/templates/blob/app/services/: blob_service.py.j2
src/azure_functions_scaffold/templates/blob/tests/: test_blob.py.j2
src/azure_functions_scaffold/templates/cosmosdb/: README.md.j2
src/azure_functions_scaffold/templates/cosmosdb/app/functions/: cosmosdb.py.j2
src/azure_functions_scaffold/templates/durable/: README.md.j2  pyproject.toml.j2
src/azure_functions_scaffold/templates/durable/app/functions/: durable.py.j2
src/azure_functions_scaffold/templates/eventhub/: README.md.j2  azure.yaml.j2
src/azure_functions_scaffold/templates/http/: .funcignore.j2  .gitignore.j2  Makefile.j2  README.md.j2  function_app.py.j2  host.json.j2  local.settings.json.example.j2  pyproject.toml.j2
src/azure_functions_scaffold/templates/http/app/core/: config.py.j2  logging.py.j2
src/azure_functions_scaffold/templates/http/app/dependencies/: __init__.py.j2
src/azure_functions_scaffold/templates/http/app/functions/: db_items.py.j2  health.py.j2  http.py.j2  users.py.j2  webhooks.py.j2
src/azure_functions_scaffold/templates/http/app/schemas/: health.py.j2  request_models.py.j2  users.py.j2  webhooks.py.j2
src/azure_functions_scaffold/templates/http/app/services/: health_service.py.j2  (+3 more)
src/azure_functions_scaffold/templates/http/tests/: test_db_items.py.j2  test_health.py.j2  test_http.py.j2  test_users.py.j2  test_webhooks.py.j2
src/azure_functions_scaffold/templates/langgraph/: .funcignore.j2  .gitignore.j2  README.md.j2  function_app.py.j2  pyproject.toml.j2
src/azure_functions_scaffold/templates/langgraph/tests/: test_echo_agent.py.j2
src/azure_functions_scaffold/templates/partials/: resource_blueprint.py.j2  resource_schema.py.j2  resource_service.py.j2  resource_test.py.j2  route_blueprint.py.j2  route_test.py.j2
src/azure_functions_scaffold/templates/partials/functions/: ai_module.py.j2  ai_test.py.j2  blob_module.py.j2  blob_test.py.j2  cosmosdb_module.py.j2  cosmosdb_test.py.j2  durable_module.py.j2  durable_test.py.j2  eventhub_module.py.j2  eventhub_test.py.j2  http_module.py.j2  http_test.py.j2  queue_module.py.j2  queue_test.py.j2  servicebus_module.py.j2  timer_module.py.j2  timer_test.py.j2
src/azure_functions_scaffold/templates/queue/: .funcignore.j2  .gitignore.j2  Makefile.j2  README.md.j2  function_app.py.j2  pyproject.toml.j2
src/azure_functions_scaffold/templates/queue/tests/: test_queue.py.j2
src/azure_functions_scaffold/templates/servicebus/: README.md.j2  function_app.py.j2  local.settings.json.example.j2  pyproject.toml.j2
src/azure_functions_scaffold/templates/servicebus/tests/: test_servicebus.py.j2
src/azure_functions_scaffold/templates/timer/: Makefile.j2  README.md.j2  function_app.py.j2  pyproject.toml.j2
src/azure_functions_scaffold/templates/timer/tests/: test_timer.py.j2
testing/: index.html
tests/: conftest.py  test_cli.py  test_cli_intents.py  test_docs_cli_examples.py  test_generated_pytest_collection.py  test_generator.py  test_preview_python.py  test_public_api.py  test_readme_triggers.py  test_scaffolder.py  test_template_smoke.py
tests/e2e/: test_scaffold_e2e.py
(+9 files in other folders)
