[project]
name = "azure-functions-scaffold-python"
description = "Scaffolding CLI for Azure Functions Python v2 projects"
keywords = ["azure-functions", "azure", "python", "v2", "scaffold", "cli", "code-generator", "serverless"]
authors = [{ name = "Yeongseon Choe", email = "yeongseon.choe@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.15"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "jinja2>=3.1,<4.0",
    "typer>=0.16,<1.0",
]

[project.optional-dependencies]
dev = [
    "bandit==1.9.4",
    "build",
    "coverage",
    "git-cliff",
    "hatch",
    "mypy==1.20.0",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff==0.15.10",
    "requests",
    "types-requests",
    # Smoke-test deps: generated project runtime packages needed by
    # test_template_smoke.py to run the scaffolded project's own test suite.
    "azure-functions>=1.23.0",
    "azure-functions-logging>=0.5.0",
    "azure-functions-openapi>=0.17.0",
    "azure-functions-validation>=0.7.0",
    "azure-functions-doctor>=0.16.0",
    "pydantic>=2.0.0",
]
docs = [
    "mkdocs<2.0",
    "mkdocs-material<10.0",
    "mkdocstrings[python]<2.0",
]

[project.urls]
Homepage = "https://yeongseon.github.io/azure-functions-scaffold-python/"
Documentation = "https://yeongseon.github.io/azure-functions-scaffold-python/"
Repository = "https://github.com/yeongseon/azure-functions-scaffold-python"
Issues = "https://github.com/yeongseon/azure-functions-scaffold-python/issues"

[project.scripts]
azure-functions-scaffold-python = "azure_functions_scaffold.cli:app"
afs = "azure_functions_scaffold.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/azure_functions_scaffold"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "docs",
    "README.md",
    "Makefile",
    "pyproject.toml",
]

[tool.hatch.version]
path = "src/azure_functions_scaffold/__init__.py"

[tool.hatch.publish.index]
default = "pypi"

[tool.hatch.publish.index.repos.pypi]
url = "https://upload.pypi.org/legacy/"

[tool.hatch.publish.index.repos.test]
url = "https://test.pypi.org/legacy/"

[tool.hatch.envs.default]
python = "3.10"
features = ["dev", "docs"]

[tool.hatch.envs.default.scripts]
format = "ruff format src tests"
style = "ruff check src tests"
typecheck = "mypy src tests"
lint = "hatch run style && hatch run typecheck"
test = "pytest -v tests"
cov = "pytest --cov-report=term-missing --cov-report=html --cov-report=xml tests/"
e2e-azure = "pytest -v -m e2e tests/e2e/"
docs = "mkdocs serve"
precommit = "pre-commit run --all-files"
precommit-install = "pre-commit install"
security = "python -m bandit -r src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["azure_functions_scaffold"]
force-sort-within-sections = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
addopts = "--cov=src/azure_functions_scaffold --cov-report=xml --cov-report=term-missing -ra -q -m 'not e2e'"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = ["e2e: real Azure end-to-end tests (require E2E_BASE_URL)", "slow: tests that spawn subprocesses or need extra time"]

[tool.coverage.run]
branch = true
source = ["src/azure_functions_scaffold"]
omit = ["src/azure_functions_scaffold/templates/**/*.j2"]

[tool.coverage.report]
show_missing = true
fail_under = 90
skip_covered = true

[tool.bandit]
exclude_dirs = ["tests"]
